--- a/IntroGit/index.html
+++ b/IntroGit/index.html
@@ -8,6 +8,7 @@
     <title>Intro a Git</title>
 </head>
 <body>
-    <h1>INTRODUCCIÓN A LOS COMANDOS DE GIT PARA GitHub</h1>
+    <h1 id="titulo"> INTRODUCCIÓN A LOS COMANDOS DE GIT PARA GitHub</h1>
+    <script src="app.js"></script>
 </body>
 </html>
